--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -23,6 +23,10 @@ frozenlist==1.5.0
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+Hypercorn==0.17.3
+hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -32,6 +36,7 @@ multidict==6.1.0
 mysql-connector==2.2.9
 mysqlclient==2.2.7
 packaging==24.2
+priority==2.0.0
 propcache==0.2.1
 psycopg2==2.9.10
 pycparser==2.22
