--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -29,7 +29,7 @@ Hypercorn==0.17.3
 hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
-Jinja2== 3.1.6
+Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
 multidict==6.1.0
@@ -45,6 +45,7 @@ PyMySQL==1.1.1
 python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
+pytz==2025.1
 requests==2.32.3
 simple-websocket==1.1.0
 SQLAlchemy==2.0.38
