--- a/requirements.txt
+++ b/requirements.txt
@@ -2,32 +2,42 @@ aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
 alembic==1.14.1
+amqp==5.3.1
 asyncio==3.4.3
 attrs==25.1.0
 bcrypt==4.2.1
 bidict==0.23.1
+billiard==4.2.1
 blinker==1.9.0
 branca==0.8.1
+celery==5.5.3
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 colorama==0.4.6
+contourpy==1.3.2
 cryptography==44.0.1
+cycler==0.12.1
 dnspython==2.7.0
 eventlet==0.39.1
-Flask==3.1.1
+Flask==3.1.0
 Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
-Flask-Cors==6.0.0
+Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 folium==0.19.5
+fonttools==4.57.0
 frozenlist==1.5.0
-greenlet==3.1.1
+gevent-websocket==0.10.1
+greenlet==3.2.4
 gunicorn==23.0.0
-h11>=0.16.0
+h11==0.14.0
 h2==4.2.0
 hpack==4.1.0
 Hypercorn==0.17.3
@@ -35,35 +45,47 @@ hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+kiwisolver==1.4.8
+kombu==5.5.4
 Mako==1.3.9
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 multidict==6.1.0
 mysql-connector==2.2.9
 mysqlclient==2.2.7
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
+pillow==11.2.1
 priority==2.0.0
+prompt_toolkit==3.0.51
 propcache==0.2.1
 psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
 pytz==2025.1
-requests==2.32.4
+redis==6.4.0
+requests==2.32.3
+setuptools==80.9.0
 simple-websocket==1.1.0
 six==1.17.0
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
 websocket-client==1.8.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
 xyzservices==2025.1.0
 yarl==1.18.3
+zope.event==5.1.1
+zope.interface==7.2
