--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ Flask==3.1.1
 Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 flask-cors==6.0.1
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
